--- a/BilgiOtelDAL/BilgiOtelDAL.csproj
+++ b/BilgiOtelDAL/BilgiOtelDAL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DataConnections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entity\Entity.csproj">
