--- a/BilgiOtelDAL/BilgiOtelDAL.csproj
+++ b/BilgiOtelDAL/BilgiOtelDAL.csproj
@@ -45,6 +45,9 @@
     <Compile Include="CalisanlarDAL.cs" />
     <Compile Include="CalismaSaatleriDAL.cs" />
     <Compile Include="DataConnections.cs" />
+    <Compile Include="KampanyalarDAL.cs" />
+    <Compile Include="MedeniHalDAL.cs" />
+    <Compile Include="MesailerDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLHelper.cs" />
   </ItemGroup>
