--- a/BilgiOtelDAL/BilgiOtelDAL.csproj
+++ b/BilgiOtelDAL/BilgiOtelDAL.csproj
@@ -50,8 +50,15 @@
     <Compile Include="MesailerDAL.cs" />
     <Compile Include="MesleklerDAL.cs" />
     <Compile Include="MusteriHarcamalarDAL.cs" />
+    <Compile Include="MusterilerDAL.cs" />
+    <Compile Include="OdaBakimLoglariDAL.cs" />
+    <Compile Include="OdalarDAL.cs" />
+    <Compile Include="PaketlerDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLHelper.cs" />
+    <Compile Include="UrunlerDAL.cs" />
+    <Compile Include="VardiyalarDAL.cs" />
+    <Compile Include="YoneticilerDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entity\Entity.csproj">
